syntax = "proto3";

option go_package = "document-generators-presentation-abstractions";

package Edm.DocumentGenerators.Presentation.Abstractions;

option csharp_namespace = "Edm.DocumentGenerators.Presentation.Abstractions";

import "Grpc/Services/Contracts/Statuses/document_status.proto";
import "Grpc/Services/Contracts/StatusesTransitions/Types/document_status_transition_type.proto";
import "Grpc/Services/Contracts/StatusesTransitions/Parameters/document_status_transition_parameter.proto";
import "Grpc/Services/Contracts/Permissions/document_permission.proto";

message DocumentStatusTransitionDetailedDto {
  DocumentStatusDto status = 1;
  DocumentStatusTransitionTypeDto type = 5;
  repeated DocumentStatusTransitionParameterDto parameters = 4;
  repeated DocumentPermissionDto permissions = 3;
  string display_name = 2;
}
